添加友联页面

--- a/index.html
+++ b/index.html
@@ -65,13 +65,12 @@
 		<p>Welcome to my website!</p>
 		<p>Visit my <a href="//github.com/guguan123" title="Visit my Github Pages">Github Pages</a>.</p>
 		<p>Explore my <a href="//blog.guguan.dpdns.org" title="Visit my Blog">Blog</a>.</p>
-		<p>Discover <a href="//dcms.myredirect.us" title="Visit DCMS Dev">DCMS Dev</a>.</p>
 		<p>Check out my <a href="//tracker.guguan.dpdns.org" title="My BitTorrent Tracker">BitTorrent Tracker</a>.</p>
+		<p>Meet my <a href="friend-links.html" title="Friend's Links" aria-label="Visit GuGuan123's friend links page">Friend's Links</a>.</p>
 	</main>
 	<footer>
 		<p>© 2024 <a href="about.html" title="About Me">GuGuan123</a>. All rights reserved.</p>
 		<a href="//wapmz.com/in/50" target="_blank"><img src="//wapmz.com/cn/big/50" alt="wapmz.com"></a>
-		<a href="//icp.gov.moe/?keyword=20252412" target="_blank">萌ICP备20252412号</a>
 	</footer>
 </body>
 </html>
