--- a/about.html
+++ b/about.html
@@ -62,6 +62,7 @@
 	</main>
 	<footer>
 		<p>© 2025 GuGuan123. All rights reserved.</p>
+		<a href="//icp.gov.moe/?keyword=20252412" target="_blank">萌ICP备20252412号</a>
 	</footer>
 </body>
 </html>
