--- a/friend-links.html
+++ b/friend-links.html
@@ -64,8 +64,10 @@
 	<main>
 		<p>Here are some awesome websites and friends I recommend checking out!</p>
 		<!-- 友联 -->
-		<p><a href="//example.com" target="_blank" rel="noopener noreferrer" aria-label="Visit Example's website">Example</a></p>
+		<p><a href="//example.com" target="_blank" rel="noopener noreferrer" aria-label="Visit Example website">Example Website</a></p>
 		<p><a href="//dcms.net.cn" target="_blank" rel="noopener noreferrer" aria-label="Visit CN_DCMS-Social">CN_DCMS-Social</a></p>
+		<p><a href="https://qwer.top" target="_blank"><img src="https://s2.loli.net/2025/04/09/72tClKUqY6Xvbz1.jpg" weight="80px" height="50px" /></a></p>
+		<p><a href="https://xn--ltr52ntoj5kq.org/" target="_blank" style="color: #3498db; text-decoration: none; font-weight: bold; padding: 5px; border: 1px solid #3498db; border-radius: 5px; transition: background-color 0.3s; display: inline-block;">数字生命计划</a></p>
 	</main>
 	<footer>
 		<p>© 2025 GuGuan123. All rights reserved.</p>
