--- a/friend-links.html
+++ b/friend-links.html
@@ -64,10 +64,10 @@
 	<main>
 		<p>Here are some awesome websites and friends I recommend checking out!</p>
 		<!-- 友联 -->
-		<p><a href="//example.com" target="_blank" rel="noopener noreferrer" aria-label="Visit Example website">Example Website</a></p>
-		<p><a href="//dcms.net.cn" target="_blank" rel="noopener noreferrer" aria-label="Visit CN_DCMS-Social">CN_DCMS-Social</a></p>
-		<p><a href="https://qwer.top" target="_blank"><img src="https://s2.loli.net/2025/04/09/72tClKUqY6Xvbz1.jpg" weight="80px" height="50px" /></a></p>
-		<p><a href="https://xn--ltr52ntoj5kq.org/" target="_blank" style="color: #3498db; text-decoration: none; font-weight: bold; padding: 5px; border: 1px solid #3498db; border-radius: 5px; transition: background-color 0.3s; display: inline-block;">数字生命计划</a></p>
+		<p><a href="https://example.com" target="_blank" rel="noopener noreferrer" aria-label="Visit Example website">Example Website</a></p>
+		<p><a href="https://dcms.net.cn" target="_blank" rel="noopener noreferrer" aria-label="Visit CN_DCMS-Social">CN_DCMS-Social</a></p>
+		<p><a href="https://xn--ltr52ntoj5kq.org/" target="_blank" rel="noopener noreferrer" style="color: #3498db; text-decoration: none; font-weight: bold; padding: 5px; border: 1px solid #3498db; border-radius: 5px; transition: background-color 0.3s; display: inline-block;">数字生命计划</a></p>
+		<p><a href="https://k9b.cn/" target="_blank" rel="noopener external nofollow" referrer="unsafe-url"><img referrerpolicy="no-referrer" rel="noreferrer" width="25" height="25" class="avatar lazyloaded" src="https://q.qlogo.cn/headimg_dl?dst_uin=3589067134&spec=640&img_type=jpg" alt="泯轲的主页">泯轲的主页</a></p>
 	</main>
 	<footer>
 		<p>© 2025 GuGuan123. All rights reserved.</p>
