--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
 		<section>
 			<h4>more</h4>
 			<ul>
-				<li><a href="//guguan.dpdns.org/mcsm/" title="My MCSManager panel">MCSManager panel</a></li>
+				<li><a href="//vps2770-skl.guguan.dpdns.org/mcsm/" title="My MCSManager panel">MCSManager panel</a></li>
 				<li><a href="//frp.guguan.dpdns.org/alist/" title="My Alist">Alist</a> - My personal network drive.</li>
 				<li><a href="https://guguan123.github.io/keys/id_rsa.pub" title="My SSH Key">SSH Key</a></li>
 			</ul>
