--- a/Gaokao-Countdown.html
+++ b/Gaokao-Countdown.html
@@ -341,7 +341,7 @@
             <div class="footer">
                 联系方式：<i>guguan123@outlook.com</i>
                 <br>
-                © 2023 Not right reserved.&nbsp;自豪地不由<a href="https://netlify.com" target="_blank" class="NetlifyURL">Netlify</a>强力驱动.&nbsp;<a href="http://wapmz.com/in/49"><img src="http://wapmz.com/cn/small/49" alt="wapmz.com"></a>
+                © 2023 Not right reserved.&nbsp;自豪地不由<a href="https://netlify.com" target="_blank" rel="noopener" class="NetlifyURL">Netlify</a>强力驱动.&nbsp;<a href="http://wapmz.com/in/49"><img src="http://wapmz.com/cn/small/49" alt="wapmz.com"></a>
             </div>
         </div>
     </div>
