--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Welcome to GuGuan123's personal website, featuring links to Github, blog, tracker, and more.">
 	<meta property="og:title" content="GuGuan123's Website">
 	<meta property="og:description" content="Visit my personal site to explore my projects and blog.">
-	<meta property="og:url" content="https://www.guguan.dpdns.org">
+	<meta property="og:url" content="https://guguan.us.kg">
 	<meta property="og:type" content="website">
 	<meta property="og:image" content="https://s1.imagehub.cc/images/2025/02/08/92c7c4a4be2d7588121c3f23d2f79bcb.png">
 	<title>GuGuan123's Website</title>
@@ -63,8 +63,8 @@
 	</header>
 	<main>
 		<p>Welcome to my website!</p>
-		<p>Visit my <a href="//github.com/guguan123" title="Visit my Github Pages">Github Pages</a>.</p>
-		<p>Explore my <a href="//blog.guguan.dpdns.org" title="Visit my Blog">Blog</a>.</p>
+		<p>Visit my <a href="https://github.com/guguan123" title="Visit my Github Pages">Github Pages</a>.</p>
+		<p>Explore my <a href="//blog.guguan.us.kg" title="Visit my Blog">Blog</a>.</p>
 		<p>Check out my <a href="//tracker.guguan.dpdns.org" title="My BitTorrent Tracker">BitTorrent Tracker</a>.</p>
 		<p>Meet my <a href="friend-links.html" title="Friend's Links" aria-label="Visit GuGuan123's friend links page">Friend's Links</a>.</p>
 	</main>
