--- a/Gaokao-Countdown.html
+++ b/Gaokao-Countdown.html
@@ -325,6 +325,14 @@
         // 自动更新倒计时
         setInterval(calculateCountdown, 1000);
     </script>
+    <!-- Clarity tracking code for https://guguan.us.kg/ -->
+	<script>
+		(function(c,l,a,r,i,t,y){
+			c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+			t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i+"?ref=bwt";
+			y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+		})(window, document, "clarity", "script", "qwm2cpd5ks");
+	</script>
 </head>
 <body>
     <div class="container">
