--- a/friend-links.html
+++ b/friend-links.html
@@ -47,7 +47,7 @@
 			}
 		}
 	</style>
-	<!-- Clarity tracking code for https://guguan.dpdns.org/ -->
+	<!-- Clarity tracking code for https://guguan.us.kg/ -->
 	<script>
 		(function(c,l,a,r,i,t,y){
 			c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
