--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			}
 		}
 	</style>
-	<!-- Clarity tracking code for https://guguan.dpdns.org/ -->
+	<!-- Clarity tracking code for https://guguan.us.kg/ -->
 	<script>
 		(function(c,l,a,r,i,t,y){
 			c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
@@ -67,7 +67,7 @@
 		<p>Welcome to my website!</p>
 		<p>Visit my <a href="https://github.com/guguan123" title="Visit my Github Pages">Github Pages</a>.</p>
 		<p>Explore my <a href="//blog.guguan.us.kg" title="Visit my Blog">Blog</a>.</p>
-		<p>Check out my <a href="//tracker.guguan.dpdns.org" title="My BitTorrent Tracker">BitTorrent Tracker</a>.</p>
+		<!--<p>Check out my <a href="//tracker.guguan.us.kg" title="My BitTorrent Tracker">BitTorrent Tracker</a>.</p>-->
 		<p>Meet my <a href="friend-links.html" title="Friend's Links" aria-label="Visit GuGuan123's friend links page">Friend's Links</a>.</p>
 	</main>
 	<footer>
