--- a/about.html
+++ b/about.html
@@ -44,8 +44,8 @@
 		<section>
 			<h4>more</h4>
 			<ul>
-				<li><a href="https://vps2770-skl.guguan.dpdns.org/mcsm/" title="My MCSManager panel">MCSManager panel</a></li>
-				<li><a href="https://frp.guguan.dpdns.org/alist/" title="My Alist">Alist</a> - My personal network drive.</li>
+				<li><a href="https://vps2770-skl.guguan.us.kg/mcsm/" title="My MCSManager panel">MCSManager panel</a></li>
+				<li><a href="https://frp.guguan.us.kg/alist/" title="My Alist">Alist</a> - My personal network drive.</li>
 				<li><a href="https://guguan123.github.io/keys/id_rsa.pub" title="My SSH Key">SSH Key</a></li>
 			</ul>
 		</section>
