renamed:    keys/id_rsa.pub -> id_rsa.pub

--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
 			<ul>
 				<li><a href="https://vps2770-skl.guguan.us.kg/mcsm/" title="My MCSManager panel">MCSManager panel</a></li>
 				<li><a href="https://frp.guguan.us.kg/alist/" title="My Alist">Alist</a> - My personal network drive.</li>
-				<li><a href="https://guguan123.github.io/keys/id_rsa.pub" title="My SSH Key">SSH Key</a></li>
+				<li><a href="https://guguan123.github.io/id_rsa.pub" title="My SSH Key">SSH Key</a></li>
 			</ul>
 		</section>
 	</main>
