为页面添加预取链接以优化加载速度

--- a/friend-links.html
+++ b/friend-links.html
@@ -18,6 +18,7 @@
 			y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
 		})(window, document, "clarity", "script", "qwm2cpd5ks");
 	</script>
+	<link rel="prefetch" href=".">
 </head>
 <body>
 	<header>
