--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 			y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
 		})(window, document, "clarity", "script", "qwm2cpd5ks");
 	</script>
+	<link rel="prefetch" href="friend-links.html">
+	<link rel="prefetch" href="about.html">
+	<link rel="prefetch" href="https://blog.guguan.us.kg">
 </head>
 <body>
 	<header>
