--- a/google028d8e7da5110e2c.html
+++ b/google028d8e7da5110e2c.html
@@ -1,1 +1,12 @@
-google-site-verification: google028d8e7da5110e2c.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link href="main.css" rel="stylesheet" />
+	<title>Google site verification</title>
+</head>
+<body>
+	google-site-verification: google028d8e7da5110e2c.html
+</body>
+</html>
