renamed:    main.css -> dark.css

--- a/friend-links.html
+++ b/friend-links.html
@@ -9,7 +9,7 @@
 	<meta property="og:url" content="https://guguan.us.kg/friends.html" />
 	<meta property="og:type" content="website" />
 	<title>GuGuan123's Friends</title>
-	<link href="main.css" rel="stylesheet" />
+	<link href="dark.css" rel="stylesheet" media="(prefers-color-scheme: dark)" />
 	<!-- Clarity tracking code for https://guguan.us.kg/ -->
 	<script>
 		(function(c,l,a,r,i,t,y){
