--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 		ul { list-style-type: none; padding: 0; }
 		li { margin: 10px 0; }
 	</style>
-	<link href="main.css" rel="stylesheet" />
+	<link href="dark.css" rel="stylesheet" media="(prefers-color-scheme: dark)" />
 	<!-- Clarity tracking code for https://guguan.us.kg/ -->
 	<script>
 		(function(c,l,a,r,i,t,y){
