--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta property="og:type" content="website" />
 	<meta property="og:image" content="https://s1.imagehub.cc/images/2025/02/08/92c7c4a4be2d7588121c3f23d2f79bcb.png" />
 	<title>GuGuan123's Website</title>
-	<link href="main.css" rel="stylesheet" />
+	<link href="dark.css" rel="stylesheet" media="(prefers-color-scheme: dark)" />
 	<!-- Clarity tracking code for https://guguan.us.kg/ -->
 	<script>
 		(function(c,l,a,r,i,t,y){
