--- a/friend-links.html
+++ b/friend-links.html
@@ -29,7 +29,7 @@
 		<p>Here are some awesome websites and friends I recommend checking out!</p>
 		<!-- 友联 -->
 		<p><a href="https://example.com" target="_blank" rel="noopener noreferrer" aria-label="Visit Example website">Example Website</a></p>
-		<p><a href="https://dcms.net.cn" target="_blank" rel="noopener noreferrer" aria-label="Visit CN_DCMS-Social">CN_DCMS-Social</a></p>
+		<p><a href="https://47.238.122.99" target="_blank" rel="noopener noreferrer" aria-label="Visit CN_DCMS-Social">CN_DCMS-Social</a></p>
 		<p><a href="https://xn--ltr52ntoj5kq.org/" target="_blank" rel="noopener noreferrer" id="数字生命计划">数字生命计划<style>#数字生命计划 {color: #3498db; text-decoration: none; font-weight: bold; padding: 5px; border: 1px solid #3498db; border-radius: 5px; transition: background-color 0.3s; display: inline-block;}</style></a></p>
 		<p><a href="https://k9b.cn/" target="_blank" rel="noopener external nofollow" referrer="unsafe-url"><img referrerpolicy="no-referrer" rel="noreferrer" width="25" height="25" src="https://q.qlogo.cn/headimg_dl?dst_uin=3589067134&spec=640&img_type=jpg" alt="泯轲的Logo" />泯轲的主页</a></p>
 		<p><a href="https://emnasop.cn/"  target="_blank" rel="noopener noreferrer"><img src="https://emnasop.cn/4afc87cb-943a-4951-bc79-02833942edb8.png" width="25" height="25" alt="Emnasop Logo" />Emnasop Blog</a></p>
