--- a/about.html
+++ b/about.html
@@ -21,14 +21,7 @@
 		li { margin: 10px 0; }
 	</style>
 	<link href="dark.css" rel="stylesheet" media="(prefers-color-scheme: dark)" />
-	<!-- Clarity tracking code for https://guguan.us.kg/ -->
-	<script>
-		(function(c,l,a,r,i,t,y){
-			c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-			t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i+"?ref=bwt";
-			y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-		})(window, document, "clarity", "script", "qwm2cpd5ks");
-	</script>
+	<script src="tracking.js" async></script>
 	<link rel="prefetch" href=".">
 </head>
 <body>
