--- a/google028d8e7da5110e2c.html
+++ b/google028d8e7da5110e2c.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<script src="tracking.js" async></script>
 	<link href="dark.css" rel="stylesheet" media="(prefers-color-scheme: dark)" />
 	<title>Google site verification</title>
 </head>
