--- a/index.html
+++ b/index.html
@@ -12,14 +12,7 @@
 	<meta property="og:image" content="https://s1.imagehub.cc/images/2025/02/08/92c7c4a4be2d7588121c3f23d2f79bcb.png" />
 	<title>GuGuan123's Website</title>
 	<link href="dark.css" rel="stylesheet" media="(prefers-color-scheme: dark)" />
-	<!-- Clarity tracking code for https://guguan.us.kg/ -->
-	<script>
-		(function(c,l,a,r,i,t,y){
-			c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-			t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i+"?ref=bwt";
-			y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-		})(window, document, "clarity", "script", "qwm2cpd5ks");
-	</script>
+	<script src="tracking.js" async></script>
 	<link rel="prefetch" href="friend-links.html">
 	<link rel="prefetch" href="about.html">
 	<link rel="prefetch" href="https://blog.guguan.us.kg">
