简化css代码结构

--- a/about.html
+++ b/about.html
@@ -10,15 +10,13 @@
 	<meta property="og:type" content="website">
 	<title>About GuGuan123</title>
 	<style type="text/css">
-		body {
-			background-color: #fff;
-			color: #333;
-			font-family: Arial, sans-serif;
-			margin: 0;
-			padding: 20px;
+		ul {
+			list-style-type: none;
+			padding: 0;
 		}
-		ul { list-style-type: none; padding: 0; }
-		li { margin: 10px 0; }
+		li {
+			margin: 10px 0;
+		}
 	</style>
 	<link href="dark.css" rel="stylesheet" media="(prefers-color-scheme: dark)" />
 	<script src="tracking.js" async></script>
