--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta name="msvalidate.01" content="9766A166EC212E2EC33AFF6D98E1D3FC" />
-	<meta name="description" content="Welcome to GuGuan123's personal website, featuring links to Github, blog, tracker, and more." />
-	<meta property="og:title" content="GuGuan123's Website" />
-	<meta property="og:description" content="Visit my personal site to explore my projects and blog." />
-	<meta property="og:url" content="https://guguan.us.kg" />
-	<meta property="og:type" content="website" />
-	<meta property="og:image" content="https://s1.imagehub.cc/images/2025/02/08/92c7c4a4be2d7588121c3f23d2f79bcb.png" />
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="msvalidate.01" content="9766A166EC212E2EC33AFF6D98E1D3FC">
+	<meta name="description" content="Welcome to GuGuan123's personal website, featuring links to Github, blog, tracker, and more.">
+	<meta property="og:title" content="GuGuan123's Website">
+	<meta property="og:description" content="Visit my personal site to explore my projects and blog.">
+	<meta property="og:url" content="https://guguan.us.kg">
+	<meta property="og:type" content="website">
+	<meta property="og:image" content="https://s1.imagehub.cc/images/2025/02/08/92c7c4a4be2d7588121c3f23d2f79bcb.png">
 	<title>GuGuan123's Website</title>
-	<link href="dark.css" rel="stylesheet" media="(prefers-color-scheme: dark)" />
+	<link href="dark.css" rel="stylesheet" media="(prefers-color-scheme: dark)">
 	<script src="tracking.js" async></script>
 	<link rel="prefetch" href="friend-links.html">
 	<link rel="prefetch" href="about.html">
@@ -30,7 +30,7 @@
 	</main>
 	<footer>
 		<p>© 2024 <a href="about.html" title="About Me">GuGuan123</a>. All rights reserved.</p>
-		<a href="https://wapmz.com/in/50" target="_blank" rel="noopener"><img src="https://wapmz.com/cn/big/50" alt="wapmz.com"></a>
+		<a href="https://wapmz.com/in/50" target="_blank" rel="noopener"><img src="https://wapmz.com/cn/big/50" alt="wapmz.com" width="72" height="25"></a>
 	</footer>
 </body>
 </html>
