--- a/about.html
+++ b/about.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta name="description" content="About GuGuan123 - Learn more about me and explore my more links." />
-	<meta property="og:title" content="About GuGuan123" />
-	<meta property="og:description" content="A personal introduction and collection of my online presence." />
-	<meta property="og:url" content="https://guguan.us.kg/about.html" />
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="About GuGuan123 - Learn more about me and explore my more links.">
+	<meta property="og:title" content="About GuGuan123">
+	<meta property="og:description" content="A personal introduction and collection of my online presence.">
+	<meta property="og:url" content="https://guguan.us.kg/about.html">
 	<meta property="og:type" content="website">
 	<title>About GuGuan123</title>
 	<style type="text/css">
@@ -18,7 +18,7 @@
 			margin: 10px 0;
 		}
 	</style>
-	<link href="dark.css" rel="stylesheet" media="(prefers-color-scheme: dark)" />
+	<link href="dark.css" rel="stylesheet" media="(prefers-color-scheme: dark)">
 	<script src="tracking.js" async></script>
 	<link rel="prefetch" href=".">
 </head>
