--- a/friend-links.html
+++ b/friend-links.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta name="description" content="Friends and partners of GuGuan123's Website. Explore my network of blogs and projects." />
-	<meta property="og:title" content="GuGuan123's Friends" />
-	<meta property="og:description" content="A list of my friends, partners, and cool websites." />
-	<meta property="og:url" content="https://guguan.us.kg/friends.html" />
-	<meta property="og:type" content="website" />
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Friends and partners of GuGuan123's Website. Explore my network of blogs and projects.">
+	<meta property="og:title" content="GuGuan123's Friends">
+	<meta property="og:description" content="A list of my friends, partners, and cool websites.">
+	<meta property="og:url" content="https://guguan.us.kg/friends.html">
+	<meta property="og:type" content="website">
 	<title>GuGuan123's Friends</title>
-	<link href="dark.css" rel="stylesheet" media="(prefers-color-scheme: dark)" />
+	<link href="dark.css" rel="stylesheet" media="(prefers-color-scheme: dark)">
 	<script src="tracking.js" async></script>
 	<link rel="prefetch" href=".">
 </head>
