--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 	</main>
 	<footer>
 		<p>© 2025 GuGuan123. All rights reserved.</p>
-		<a href="https://icp.gov.moe/?keyword=20252412" target="_blank" rel="noopener">萌ICP备20252412号</a>
+		<a href="javascript:void(0);" data-url="https://icp.gov.moe/?keyword=20252412" onclick="let url=this.getAttribute('data-url'); if(confirm(`是否要跳转到 ${url}`)) { window.open(url, '_blank'); }">萌ICP备20252412号</a>
 	</footer>
 </body>
 </html>
