--- a/friend-links.html
+++ b/friend-links.html
@@ -23,7 +23,7 @@
 		<!-- 友联 -->
 		<p><a href="https://example.com" target="_blank" rel="noopener noreferrer" aria-label="Visit Example website">Example Website</a></p>
 		<p><a href="https://3g.cx" target="_blank" rel="noopener noreferrer" aria-label="Visit CN_DCMS-Social">CN_DCMS-Social</a></p>
-		<p><a href="https://xn--ltr52ntoj5kq.org/" target="_blank" rel="noopener noreferrer" id="数字生命计划">数字生命计划<style>#数字生命计划 {color: #3498db; text-decoration: none; font-weight: bold; padding: 5px; border: 1px solid #3498db; border-radius: 5px; transition: background-color 0.3s; display: inline-block;}</style></a></p>
+		<p><a href="javascript:void(0);" rel="nofollow" data-url="https://xn--ltr52ntoj5kq.org/" id="数字生命计划" onclick="let url=this.getAttribute('data-url'); if(confirm(`是否要跳转到 ${url}`)) { window.open(url, '_blank'); }">数字生命计划</a><style>#数字生命计划 {color: #3498db; text-decoration: none; font-weight: bold; padding: 5px; border: 1px solid #3498db; border-radius: 5px; transition: background-color 0.3s; display: inline-block;}</style></p>
 		<p><a href="https://k9b.cn/" target="_blank" rel="noopener external nofollow"><img referrerpolicy="no-referrer" loading="lazy" decoding="async" width="25" height="25" src="https://q.qlogo.cn/headimg_dl?dst_uin=3589067134&spec=640&img_type=jpg" alt="泯轲的头像" />泯轲的主页</a></p>
 		<p><a href="https://emnasop.cn/"  target="_blank" rel="noopener noreferrer"><img src="https://emnasop.cn/4afc87cb-943a-4951-bc79-02833942edb8.png" loading="lazy" decoding="async" width="25" height="25" alt="Emnasop的头像" />Emnasop Blog</a></p>
 	</main>
