--- a/about.html
+++ b/about.html
@@ -44,7 +44,10 @@
 	</main>
 	<footer>
 		<p>© 2025 GuGuan123. All rights reserved.</p>
-		<a href="javascript:void(0);" data-url="https://icp.gov.moe/?keyword=20252412" onclick="let url=this.getAttribute('data-url'); if(confirm(`是否要跳转到 ${url}`)) { window.open(url, '_blank'); }">萌ICP备20252412号</a>
+		<a href="javascript:void(0);" data-url="nUE0pUZ6Yl9cL3NhM292Yz1iMF8/n2I5q29lMQ0lZQV1ZwDkZt==" rel="nofollow" onclick="(function(encoded){'use strict'; let rot13 = (s => s.replace(/[a-zA-Z]/g, c => String.fromCharCode((c <= 'Z' ? 90 : 122) >= (c = c.charCodeAt(0) + 13) ? c : c - 26))); let url = atob(rot13(encoded)); if(confirm(`是否要跳转到 ${url}？`)) { window.open(url, '_blank', 'noopener');}})(this.getAttribute('data-url'));">萌ICP备20252412号</a>
+		<!--script>
+			(function(url){return btoa(url).replace(/[a-zA-Z]/g, c => String.fromCharCode((c <= 'Z' ? 90 : 122) >= (c = c.charCodeAt(0) + 13) ? c : c - 26));})(prompt('请输入要混淆的URL：'));
+		</script-->
 	</footer>
 </body>
 </html>
