--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	</main>
 	<footer>
 		<p>© 2024 <a href="about.html" title="About Me">GuGuan123</a>. All rights reserved.</p>
-		<a href="https://wapmz.com/in/50" target="_blank" rel="noopener"><img src="https://wapmz.com/cn/big/50" alt="wapmz.com" decoding="async" width="72" height="25"></a>
+		<a href="https://wapmz.com/in/50" target="_blank" rel="noopener nofollow"><img src="https://wapmz.com/cn/big/50" alt="wapmz.com" decoding="async" width="72" height="25"></a>
 	</footer>
 </body>
 </html>
