--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 	<main>
 		<section>
 			<h2>Who Am I?</h2>
-			<p>Hi, I'm GuGuan123, a high school student. I love coding, blogging, and exploring the digital world.</p>
+			<p>Hi, I'm a high school student. I love coding, blogging, and exploring the digital world.</p>
 		</section>
 		<section>
 			<h4>more</h4>
