--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<title>GuGuan123's Website</title>
 	<link href="dark.css" rel="stylesheet" media="(prefers-color-scheme: dark)">
 	<script src="tracking.js" async></script>
+	<link rel="canonical" href="https://guguan.us.kg">
 	<link rel="prefetch" href="friend-links.html">
 	<link rel="prefetch" href="about.html">
 	<link rel="prefetch" href="https://blog.guguan.us.kg">
