--- a/friend-links.html
+++ b/friend-links.html
@@ -11,6 +11,7 @@
 	<title>GuGuan123's Friends</title>
 	<link href="dark.css" rel="stylesheet" media="(prefers-color-scheme: dark)">
 	<script src="tracking.js" async></script>
+	<link rel="canonical" href="https://guguan.us.kg/friend-links.html">
 	<link rel="prefetch" href=".">
 </head>
 <body>
