--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
 	</style>
 	<link href="dark.css" rel="stylesheet" media="(prefers-color-scheme: dark)">
 	<script src="tracking.js" async></script>
+	<link rel="canonical" href="https://guguan.us.kg/about.html">
 	<link rel="prefetch" href=".">
 </head>
 <body>
