--- a/google028d8e7da5110e2c.html
+++ b/google028d8e7da5110e2c.html
@@ -6,6 +6,7 @@
 	<script src="tracking.js" async></script>
 	<link href="dark.css" rel="stylesheet" media="(prefers-color-scheme: dark)">
 	<title>Google site verification</title>
+	<link rel="canonical" href="https://guguan.us.kg/google028d8e7da5110e2c.html">
 </head>
 <body>
 	google-site-verification: google028d8e7da5110e2c.html
