--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<p>Welcome to my website!</p>
 		<p>Visit my <a href="https://github.com/guguan123" title="Visit my Github Pages">Github Pages</a>.</p>
 		<p>Explore my <a href="https://blog.guguan.us.kg" title="Visit my Blog">Blog</a>.</p>
-		<!--<p>Check out my <a href="https://tracker.guguan.us.kg" title="My BitTorrent Tracker">BitTorrent Tracker</a>.</p>-->
+		<p>Check out my <a href="https://tracker.guguan.us.kg" title="My BitTorrent Tracker">BitTorrent Tracker</a>.</p>
 		<p>Meet my <a href="friend-links.html" title="Friend's Links" aria-label="Visit GuGuan123's friend links page">Friend's Links</a>.</p>
 	</main>
 	<footer>
