modified:   about.html

--- a/about.html
+++ b/about.html
@@ -30,9 +30,9 @@
 	</header>
 	<main>
 		<section>
-			<h2>Who Am I?</h2>
-			<p>Hi, I'm a high school student. I love coding, blogging, and exploring the digital world.</p>
+			<p>I don't know what I'm doing with my life.</p>
 		</section>
+		<hr>
 		<section>
 			<h4>more</h4>
 			<ul>
