显式设置网页图标

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="msvalidate.01" content="9766A166EC212E2EC33AFF6D98E1D3FC">
 	<meta name="description" content="Welcome to GuGuan123's personal website, featuring links to Github, blog, tracker, and more.">
+	<link rel="icon" type="image/png" href="https://avatars.githubusercontent.com/u/93070974">
 	<meta property="og:title" content="GuGuan123's Website">
 	<meta property="og:description" content="Visit my personal site to explore my projects and blog.">
 	<meta property="og:url" content="https://guguan.us.kg">
