--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 		<p>Explore my <a href="https://blog.guguan.us.kg" title="Visit my Blog">Blog</a>.</p>
 		<p>Check out my <a href="https://tracker.guguan.us.kg" title="My BitTorrent Tracker">BitTorrent Tracker</a>.</p>
 		<p>Meet my <a href="friend-links.html" title="Friend's Links" aria-label="Visit GuGuan123's friend links page">Friend's Links</a>.</p>
+		<a rel="me" href="https://mastodon.social/@guguan">Mastodon</a>
 	</main>
 	<footer>
 		<p>© 2024 <a href="about.html" title="About Me">GuGuan123</a>. All rights reserved.</p>
