--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
 		<section>
 			<h4>more</h4>
 			<ul>
-				<li><a href="https://vps2770-skl.guguan.us.kg/mcsm/" title="My MCSManager panel">MCSManager panel</a></li>
+				<li><a href="https://lxd1145117792420.guguan.us.kg/mcsm/" title="My MCSManager panel">MCSManager panel</a></li>
 				<li><a href="https://hk-serv.guguan.us.kg/openlist/" title="My OpenList">OpenList</a> - My personal network drive.</li>
 				<li><a href="id_rsa.pub" title="My SSH Key">SSH Key</a></li>
 				<li><a href="https://keys.openpgp.org/vks/v1/by-fingerprint/CB5C1F0BA6BF679BDDB5EE832F4D953C41860BEB" title="My PGP Public Key" target="_blank" rel="noopener">PGP Public Key (0x41860BEB)</a></li>
